compiler/tests/compile_pass/region_partition3.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task make_partition(r: region<int>)
  , reads(r), writes(r)
{
  let x: int@r = new<int@r>();
  let c: coloring<r> = color(coloring<r>(), x, 0);
  let p = partition<r, aliased>(c);
  let r0 = p[0];
  make_partition(r0);
}

task main()
{
  let r: region<int> = region<int>(1);
  make_partition(r);
}
